# rust-serde-practice

./: Cargo.toml
src/: main.rs
