[package]
name = "serde_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
humantime-serde = "1.1.1"
uuid = {version = "1.11.0", features = ["serde"]}
url = {version = "2.5.3", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
toml = "0.8.19"
serde_yaml = "0.9.34"
